...
                imageVector = Icons.Default.Add,
                contentDescription = stringResource(R.string.cd_new_session),
                tint = accent,
                modifier =
                Modifier
                    .size(24.dp)
                    .testTag("AddSessionButton")
                    .clip(CircleShape)
                    .clickable {
                        onClose()
                        viewModel.createSession()
                    }.padding(2.dp),
            )
...
                label = stringResource(R.string.text_search),
                onClick = {
                    onClose()
                    onSearch()
                },
                textColor = textColor,
                testTag = "SearchButton",
            )
            DrawerActionButton(
                icon = Icons.Default.Settings,
                label = stringResource(R.string.settings_button),
                onClick = {
                    onClose()
...
